--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
   <title>Github Explorer version 2024</title>
 </head>
 <body>
-  
+  <div id="root"></div>
+
+  <script src="../dist/bundle.js"></script>
 </body>
 </html>
